manifests/0000_10_config-operator_01_openshift-config-ns_networkpolicy_default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: default-deny-all
  namespace: openshift-config
spec:
 podSelector: {}
 policyTypes:
 - Ingress
 - Egress
